; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/ivtv/extr_ivtv-streams.c_ivtv_vbi_setup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/ivtv/extr_ivtv-streams.c_ivtv_vbi_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ivtv = type { i32, i64, %struct.TYPE_6__, i32 }
%struct.TYPE_6__ = type { i32, i32, i32, i32, i32, i8*, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 }

@CX2341X_MBOX_MAX_DATA = common dso_local global i32 0, align 4
@CX2341X_ENC_SET_VBI_LINE = common dso_local global i32 0, align 4
@vbi = common dso_local global i32 0, align 4
@s_raw_fmt = common dso_local global i32 0, align 4
@s_sliced_fmt = common dso_local global i32 0, align 4
@IVTV_HW_CX25840 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [58 x i8] c"Setup VBI API header 0x%08x pkts %d buffs %d ln %d sz %d\0A\00", align 1
@CX2341X_ENC_SET_VBI_CONFIG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [41 x i8] c"Setup VBI start 0x%08x frames %d fpi %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ivtv*)* @ivtv_vbi_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ivtv_vbi_setup(%struct.ivtv* %0) #0 {
  %2 = alloca %struct.ivtv*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.ivtv* %0, %struct.ivtv** %2, align 8
  %9 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %10 = call i32 @ivtv_raw_vbi(%struct.ivtv* %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @CX2341X_MBOX_MAX_DATA, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %4, align 8
  %14 = alloca i8*, i64 %12, align 16
  store i64 %12, i64* %5, align 8
  %15 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %16 = load i32, i32* @CX2341X_ENC_SET_VBI_LINE, align 4
  %17 = call i32 @ivtv_vapi(%struct.ivtv* %15, i32 %16, i32 5, i32 65535, i32 0, i32 0, i32 0, i32 0)
  %18 = load i32, i32* %3, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %32

20:                                               ; preds = %1
  %21 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %22 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* @vbi, align 4
  %25 = load i32, i32* @s_raw_fmt, align 4
  %26 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %27 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %26, i32 0, i32 2
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 6
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 1
  %31 = call i32 @v4l2_subdev_call(i32 %23, i32 %24, i32 %25, i32* %30)
  br label %44

32:                                               ; preds = %1
  %33 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %34 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %33, i32 0, i32 3
  %35 = load i32, i32* %34, align 8
  %36 = load i32, i32* @vbi, align 4
  %37 = load i32, i32* @s_sliced_fmt, align 4
  %38 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %39 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %38, i32 0, i32 2
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %39, i32 0, i32 6
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 0
  %43 = call i32 @v4l2_subdev_call(i32 %35, i32 %36, i32 %37, i32* %42)
  br label %44

44:                                               ; preds = %32, %20
  %45 = load i32, i32* %3, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %53

47:                                               ; preds = %44
  %48 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %49 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %48, i32 0, i32 2
  %50 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = mul nsw i32 %51, 2
  store i32 %52, i32* %6, align 4
  br label %75

53:                                               ; preds = %44
  %54 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %55 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %54, i32 0, i32 1
  %56 = load i64, i64* %55, align 8
  %57 = icmp ne i64 %56, 0
  %58 = zext i1 %57 to i64
  %59 = select i1 %57, i32 24, i32 38
  store i32 %59, i32* %6, align 4
  %60 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %61 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %60, i32 0, i32 1
  %62 = load i64, i64* %61, align 8
  %63 = icmp ne i64 %62, 0
  br i1 %63, label %64, label %74

64:                                               ; preds = %53
  %65 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %66 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %65, i32 0, i32 0
  %67 = load i32, i32* %66, align 8
  %68 = load i32, i32* @IVTV_HW_CX25840, align 4
  %69 = and i32 %67, %68
  %70 = icmp ne i32 %69, 0
  br i1 %70, label %71, label %74

71:                                               ; preds = %64
  %72 = load i32, i32* %6, align 4
  %73 = add nsw i32 %72, 2
  store i32 %73, i32* %6, align 4
  br label %74

74:                                               ; preds = %71, %64, %53
  br label %75

75:                                               ; preds = %74, %47
  %76 = load i32, i32* %6, align 4
  %77 = load i32, i32* %3, align 4
  %78 = icmp ne i32 %77, 0
  br i1 %78, label %79, label %84

79:                                               ; preds = %75
  %80 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %81 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %80, i32 0, i32 2
  %82 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %81, i32 0, i32 2
  %83 = load i32, i32* %82, align 8
  br label %89

84:                                               ; preds = %75
  %85 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %86 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %85, i32 0, i32 2
  %87 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %86, i32 0, i32 3
  %88 = load i32, i32* %87, align 4
  br label %89

89:                                               ; preds = %84, %79
  %90 = phi i32 [ %83, %79 ], [ %88, %84 ]
  %91 = mul nsw i32 %76, %90
  %92 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %93 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %92, i32 0, i32 2
  %94 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %93, i32 0, i32 1
  store i32 %91, i32* %94, align 4
  %95 = load i32, i32* %3, align 4
  %96 = or i32 %95, 2
  %97 = or i32 %96, 48384
  %98 = sext i32 %97 to i64
  %99 = inttoptr i64 %98 to i8*
  %100 = getelementptr inbounds i8*, i8** %14, i64 0
  store i8* %99, i8** %100, align 16
  %101 = getelementptr inbounds i8*, i8** %14, i64 1
  store i8* inttoptr (i64 1 to i8*), i8** %101, align 8
  %102 = load i32, i32* %3, align 4
  %103 = icmp ne i32 %102, 0
  br i1 %103, label %104, label %105

104:                                              ; preds = %89
  br label %116

105:                                              ; preds = %89
  %106 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %107 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %106, i32 0, i32 2
  %108 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %107, i32 0, i32 2
  %109 = load i32, i32* %108, align 8
  %110 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %111 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %110, i32 0, i32 2
  %112 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %111, i32 0, i32 1
  %113 = load i32, i32* %112, align 4
  %114 = sdiv i32 %109, %113
  %115 = mul nsw i32 4, %114
  br label %116

116:                                              ; preds = %105, %104
  %117 = phi i32 [ 4, %104 ], [ %115, %105 ]
  %118 = sext i32 %117 to i64
  %119 = inttoptr i64 %118 to i8*
  %120 = getelementptr inbounds i8*, i8** %14, i64 2
  store i8* %119, i8** %120, align 16
  %121 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %122 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %121, i32 0, i32 0
  %123 = load i32, i32* %122, align 8
  %124 = load i32, i32* @IVTV_HW_CX25840, align 4
  %125 = and i32 %123, %124
  %126 = icmp ne i32 %125, 0
  br i1 %126, label %127, label %158

127:                                              ; preds = %116
  %128 = load i32, i32* %3, align 4
  %129 = icmp ne i32 %128, 0
  br i1 %129, label %130, label %133

130:                                              ; preds = %127
  %131 = getelementptr inbounds i8*, i8** %14, i64 3
  store i8* inttoptr (i64 543170656 to i8*), i8** %131, align 8
  %132 = getelementptr inbounds i8*, i8** %14, i64 4
  store i8* inttoptr (i64 812658800 to i8*), i8** %132, align 16
  br label %136

133:                                              ; preds = %127
  %134 = getelementptr inbounds i8*, i8** %14, i64 3
  store i8* inttoptr (i64 2968563952 to i8*), i8** %134, align 8
  %135 = getelementptr inbounds i8*, i8** %14, i64 4
  store i8* inttoptr (i64 2699075808 to i8*), i8** %135, align 16
  br label %136

136:                                              ; preds = %133, %130
  %137 = load i32, i32* %6, align 4
  %138 = sext i32 %137 to i64
  %139 = inttoptr i64 %138 to i8*
  %140 = getelementptr inbounds i8*, i8** %14, i64 5
  store i8* %139, i8** %140, align 8
  %141 = load i32, i32* %3, align 4
  %142 = icmp ne i32 %141, 0
  br i1 %142, label %143, label %148

143:                                              ; preds = %136
  %144 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %145 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %144, i32 0, i32 2
  %146 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %145, i32 0, i32 2
  %147 = load i32, i32* %146, align 8
  br label %153

148:                                              ; preds = %136
  %149 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %150 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %149, i32 0, i32 2
  %151 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %150, i32 0, i32 3
  %152 = load i32, i32* %151, align 4
  br label %153

153:                                              ; preds = %148, %143
  %154 = phi i32 [ %147, %143 ], [ %152, %148 ]
  %155 = sext i32 %154 to i64
  %156 = inttoptr i64 %155 to i8*
  %157 = getelementptr inbounds i8*, i8** %14, i64 6
  store i8* %156, i8** %157, align 16
  br label %181

158:                                              ; preds = %116
  %159 = load i32, i32* %3, align 4
  %160 = icmp ne i32 %159, 0
  br i1 %160, label %161, label %164

161:                                              ; preds = %158
  %162 = getelementptr inbounds i8*, i8** %14, i64 3
  store i8* inttoptr (i64 623207010 to i8*), i8** %162, align 8
  %163 = getelementptr inbounds i8*, i8** %14, i64 4
  store i8* inttoptr (i64 947879807 to i8*), i8** %163, align 16
  br label %167

164:                                              ; preds = %158
  %165 = getelementptr inbounds i8*, i8** %14, i64 3
  store i8* inttoptr (i64 2880171244 to i8*), i8** %165, align 8
  %166 = getelementptr inbounds i8*, i8** %14, i64 4
  store i8* inttoptr (i64 3069309425 to i8*), i8** %166, align 16
  br label %167

167:                                              ; preds = %164, %161
  %168 = load i32, i32* %6, align 4
  %169 = sext i32 %168 to i64
  %170 = inttoptr i64 %169 to i8*
  %171 = getelementptr inbounds i8*, i8** %14, i64 5
  store i8* %170, i8** %171, align 8
  %172 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %173 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %172, i32 0, i32 2
  %174 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %173, i32 0, i32 1
  %175 = load i32, i32* %174, align 4
  %176 = load i32, i32* %6, align 4
  %177 = sdiv i32 %175, %176
  %178 = sext i32 %177 to i64
  %179 = inttoptr i64 %178 to i8*
  %180 = getelementptr inbounds i8*, i8** %14, i64 6
  store i8* %179, i8** %180, align 16
  br label %181

181:                                              ; preds = %167, %153
  %182 = getelementptr inbounds i8*, i8** %14, i64 0
  %183 = load i8*, i8** %182, align 16
  %184 = getelementptr inbounds i8*, i8** %14, i64 1
  %185 = load i8*, i8** %184, align 8
  %186 = getelementptr inbounds i8*, i8** %14, i64 2
  %187 = load i8*, i8** %186, align 16
  %188 = ptrtoint i8* %187 to i32
  %189 = getelementptr inbounds i8*, i8** %14, i64 5
  %190 = load i8*, i8** %189, align 8
  %191 = getelementptr inbounds i8*, i8** %14, i64 6
  %192 = load i8*, i8** %191, align 16
  %193 = call i32 (i8*, i8*, i8*, i32, ...) @IVTV_DEBUG_INFO(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0), i8* %183, i8* %185, i32 %188, i8* %190, i8* %192)
  %194 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %195 = load i32, i32* @CX2341X_ENC_SET_VBI_CONFIG, align 4
  %196 = call i32 @ivtv_api(%struct.ivtv* %194, i32 %195, i32 7, i8** %14)
  %197 = getelementptr inbounds i8*, i8** %14, i64 2
  %198 = load i8*, i8** %197, align 16
  %199 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %200 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %199, i32 0, i32 2
  %201 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %200, i32 0, i32 5
  store i8* %198, i8** %201, align 8
  %202 = getelementptr inbounds i8*, i8** %14, i64 0
  %203 = load i8*, i8** %202, align 16
  %204 = ptrtoint i8* %203 to i32
  %205 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %206 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %205, i32 0, i32 2
  %207 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %206, i32 0, i32 4
  store i32 %204, i32* %207, align 8
  %208 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %209 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %208, i32 0, i32 2
  %210 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %209, i32 0, i32 4
  %211 = load i32, i32* %210, align 8
  %212 = icmp ne i32 %211, 0
  br i1 %212, label %217, label %213

213:                                              ; preds = %181
  %214 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %215 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %214, i32 0, i32 2
  %216 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %215, i32 0, i32 4
  store i32 1, i32* %216, align 8
  br label %217

217:                                              ; preds = %213, %181
  %218 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %219 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %218, i32 0, i32 2
  %220 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %219, i32 0, i32 5
  %221 = load i8*, i8** %220, align 8
  %222 = getelementptr inbounds i8*, i8** %14, i64 1
  %223 = load i8*, i8** %222, align 8
  %224 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %225 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %224, i32 0, i32 2
  %226 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %225, i32 0, i32 4
  %227 = load i32, i32* %226, align 8
  %228 = call i32 (i8*, i8*, i8*, i32, ...) @IVTV_DEBUG_INFO(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0), i8* %221, i8* %223, i32 %227)
  store i32 2, i32* %7, align 4
  br label %229

229:                                              ; preds = %269, %217
  %230 = load i32, i32* %7, align 4
  %231 = icmp sle i32 %230, 24
  br i1 %231, label %232, label %272

232:                                              ; preds = %229
  %233 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %234 = getelementptr inbounds %struct.ivtv, %struct.ivtv* %233, i32 0, i32 1
  %235 = load i64, i64* %234, align 8
  %236 = icmp ne i64 %235, 0
  br i1 %236, label %237, label %246

237:                                              ; preds = %232
  %238 = load i32, i32* %7, align 4
  %239 = icmp sge i32 %238, 10
  br i1 %239, label %240, label %243

240:                                              ; preds = %237
  %241 = load i32, i32* %7, align 4
  %242 = icmp slt i32 %241, 22
  br label %243

243:                                              ; preds = %240, %237
  %244 = phi i1 [ false, %237 ], [ %242, %240 ]
  %245 = zext i1 %244 to i32
  store i32 %245, i32* %8, align 4
  br label %255

246:                                              ; preds = %232
  %247 = load i32, i32* %7, align 4
  %248 = icmp sge i32 %247, 6
  br i1 %248, label %249, label %252

249:                                              ; preds = %246
  %250 = load i32, i32* %7, align 4
  %251 = icmp slt i32 %250, 24
  br label %252

252:                                              ; preds = %249, %246
  %253 = phi i1 [ false, %246 ], [ %251, %249 ]
  %254 = zext i1 %253 to i32
  store i32 %254, i32* %8, align 4
  br label %255

255:                                              ; preds = %252, %243
  %256 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %257 = load i32, i32* @CX2341X_ENC_SET_VBI_LINE, align 4
  %258 = load i32, i32* %7, align 4
  %259 = sub nsw i32 %258, 1
  %260 = load i32, i32* %8, align 4
  %261 = call i32 @ivtv_vapi(%struct.ivtv* %256, i32 %257, i32 5, i32 %259, i32 %260, i32 0, i32 0, i32 0)
  %262 = load %struct.ivtv*, %struct.ivtv** %2, align 8
  %263 = load i32, i32* @CX2341X_ENC_SET_VBI_LINE, align 4
  %264 = load i32, i32* %7, align 4
  %265 = sub nsw i32 %264, 1
  %266 = or i32 %265, -2147483648
  %267 = load i32, i32* %8, align 4
  %268 = call i32 @ivtv_vapi(%struct.ivtv* %262, i32 %263, i32 5, i32 %266, i32 %267, i32 0, i32 0, i32 0)
  br label %269

269:                                              ; preds = %255
  %270 = load i32, i32* %7, align 4
  %271 = add nsw i32 %270, 1
  store i32 %271, i32* %7, align 4
  br label %229

272:                                              ; preds = %229
  %273 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %273)
  ret void
}

declare dso_local i32 @ivtv_raw_vbi(%struct.ivtv*) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @ivtv_vapi(%struct.ivtv*, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @v4l2_subdev_call(i32, i32, i32, i32*) #1

declare dso_local i32 @IVTV_DEBUG_INFO(i8*, i8*, i8*, i32, ...) #1

declare dso_local i32 @ivtv_api(%struct.ivtv*, i32, i32, i8**) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
